fixed overflow bug

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -30,6 +30,7 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffd6e1",endColorstr="#ffb4c9",GradientType=1);
   background-repeat: no-repeat;
   min-height: 100vh;
+  overflow-y: hidden;
 }
 
 .page {
